Bug 190607 - kopete crash on closing configuration window
Summary: kopete crash on closing configuration window
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 190945 191143 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-04-25 11:25 UTC by Ruchir Brahmbhatt
Modified: 2009-05-01 00:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ruchir Brahmbhatt 2009-04-25 11:25:17 UTC
Version:           r958061 (using Devel)
Installed from:    Compiled sources

Steps to reproduce:
1. Open kopete.
2. Login to yahoo account(entered kwallet password).
3. Go to Settings->Configure.
4. Go to Chat window tab.
5. Click ok or cancel.(Yeah both crashes kopete.)

Expected result:
Configuration window should close and save/discard changes based on button clicked.

Actual result:
Kopete crash

Backtrace:
Application: Kopete (kopete), signal SIGSEGV
[?1034h[Thread debugging using libthread_db enabled]
[Current thread is 1 (Thread 0xb5402b00 (LWP 17831))]

Thread 2 (Thread 0xb38afb90 (LWP 17832)):
#0  0xffffe430 in __kernel_vsyscall ()
#1  0xb5ff9411 in select () from /lib/libc.so.6
#2  0xb6cfa477 in ?? () from /usr/lib/libQtCore.so.4
#3  0xb6c2874e in ?? () from /usr/lib/libQtCore.so.4
#4  0xb6bc61b5 in start_thread () from /lib/libpthread.so.0
#5  0xb60003be in clone () from /lib/libc.so.6

Thread 1 (Thread 0xb5402b00 (LWP 17831)):
[KCrash Handler]
#6  0x00000000 in ?? ()
#7  0xb7ca16ce in ~Account (this=0x8436a70) at /home/kde-devel/src/kde4/kdenetwork/kopete/libkopete/kopeteaccount.cpp:123
#8  0xb125494a in ~FakeAccount (this=0x8436a70) at /home/kde-devel/src/kde4/kdenetwork/kopete/kopete/config/chatwindow/chatwindowconfig.cpp:131
#9  0xb124e3c2 in ~ChatWindowConfig (this=0x8426a20) at /home/kde-devel/src/kde4/kdenetwork/kopete/kopete/config/chatwindow/chatwindowconfig.cpp:233
#10 0xb5c48d36 in KCModuleProxy::deleteClient (this=0x8399328) at /home/kde-devel/src/kde4/kdelibs/kutils/kcmoduleproxy.cpp:213
#11 0xb5c46319 in KCMultiDialogPrivate::_k_dialogClosed (this=0x82a8ac0) at /home/kde-devel/src/kde4/kdelibs/kutils/kcmultidialog.cpp:98
#12 0xb5c4736f in KCMultiDialog::qt_metacall (this=0x83019d8, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbfda7548) at /home/kde-devel/src/kde4/build/kdelibs/kutils/kcmultidialog.moc:92
#13 0xb5c5ab75 in KSettings::Dialog::qt_metacall (this=0x83019d8, _c=QMetaObject::InvokeMetaMethod, _id=83, _a=0xbfda7548) at /home/kde-devel/src/kde4/build/kdelibs/kutils/dialog.moc:69
#14 0xb6d32c88 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#15 0xb6d34412 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#16 0xb71db1d9 in KDialog::finished (this=0x83019d8) at /home/kde-devel/src/kde4/build/kdelibs/kdeui/kdialog.moc:292
#17 0xb71db258 in KDialog::hideEvent (this=0x83019d8, event=0xbfda79d0) at /home/kde-devel/src/kde4/kdelibs/kdeui/dialogs/kdialog.cpp:956
#18 0xb632e693 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#19 0xb62d7eec in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#20 0xb62e0292 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#21 0xb7271481 in KApplication::notify (this=0xbfda8cfc, receiver=0x83019d8, event=0xbfda79d0) at /home/kde-devel/src/kde4/kdelibs/kdeui/kernel/kapplication.cpp:307
#22 0xb6d1c9db in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#23 0xb632cea5 in QWidgetPrivate::hide_helper() () from /usr/lib/libQtGui.so.4
#24 0xb63348a0 in QWidget::setVisible(bool) () from /usr/lib/libQtGui.so.4
#25 0xb67d5bd4 in QDialog::setVisible(bool) () from /usr/lib/libQtGui.so.4
#26 0xb67d4a70 in QDialog::done(int) () from /usr/lib/libQtGui.so.4
#27 0xb67d363c in QDialog::reject() () from /usr/lib/libQtGui.so.4
#28 0xb71dcb0b in KDialog::slotButtonClicked (this=0x83019d8, button=32) at /home/kde-devel/src/kde4/kdelibs/kdeui/dialogs/kdialog.cpp:875
#29 0xb71df0c5 in KDialog::qt_metacall (this=0x83019d8, _c=QMetaObject::InvokeMetaMethod, _id=33, _a=0xbfda7c7c) at /home/kde-devel/src/kde4/build/kdelibs/kdeui/kdialog.moc:182
#30 0xb72a41ca in KPageDialog::qt_metacall (this=0x83019d8, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0xbfda7c7c) at /home/kde-devel/src/kde4/build/kdelibs/kdeui/kpagedialog.moc:64
#31 0xb5c47275 in KCMultiDialog::qt_metacall (this=0x83019d8, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0xbfda7c7c) at /home/kde-devel/src/kde4/build/kdelibs/kutils/kcmultidialog.moc:78
#32 0xb5c5ab75 in KSettings::Dialog::qt_metacall (this=0x83019d8, _c=QMetaObject::InvokeMetaMethod, _id=69, _a=0xbfda7c7c) at /home/kde-devel/src/kde4/build/kdelibs/kutils/dialog.moc:69
#33 0xb6d32c88 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#34 0xb6d34412 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#35 0xb6d35bc3 in QSignalMapper::mapped(int) () from /usr/lib/libQtCore.so.4
#36 0xb6d3644d in QSignalMapper::map(QObject*) () from /usr/lib/libQtCore.so.4
#37 0xb6d3663e in QSignalMapper::map() () from /usr/lib/libQtCore.so.4
#38 0xb6d36f7b in QSignalMapper::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#39 0xb6d32c88 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#40 0xb6d330c0 in QMetaObject::activate(QObject*, QMetaObject const*, int, int, void**) () from /usr/lib/libQtCore.so.4
#41 0xb6970a21 in QAbstractButton::clicked(bool) () from /usr/lib/libQtGui.so.4
#42 0xb669b869 in ?? () from /usr/lib/libQtGui.so.4
#43 0xb669d464 in ?? () from /usr/lib/libQtGui.so.4
#44 0xb669d6f6 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#45 0xb632eaf3 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#46 0xb669b70e in QAbstractButton::event(QEvent*) () from /usr/lib/libQtGui.so.4
#47 0xb6746560 in QPushButton::event(QEvent*) () from /usr/lib/libQtGui.so.4
#48 0xb62d7eec in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#49 0xb62e0b21 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#50 0xb7271481 in KApplication::notify (this=0xbfda8cfc, receiver=0x82aac20, event=0xbfda83e8) at /home/kde-devel/src/kde4/kdelibs/kdeui/kernel/kapplication.cpp:307
#51 0xb6d1c9db in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#52 0xb62dfb8e in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&) () from /usr/lib/libQtGui.so.4
#53 0xb634f8e6 in ?? () from /usr/lib/libQtGui.so.4
#54 0xb634ec27 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#55 0xb63783ca in ?? () from /usr/lib/libQtGui.so.4
#56 0xb5a32ea8 in IA__g_main_context_dispatch (context=0x80a5918) at gmain.c:1814
#57 0xb5a3641b in g_main_context_iterate (context=0x80a5918, block=1, dispatch=1, self=0x80ab6d8) at gmain.c:2448
#58 0xb5a36598 in IA__g_main_context_iteration (context=0x80a5918, may_block=1) at gmain.c:2511
#59 0xb6d48428 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#60 0xb6377ac5 in ?? () from /usr/lib/libQtGui.so.4
#61 0xb6d1affa in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#62 0xb6d1b43a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#63 0xb6d1d8e9 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#64 0xb62d7d67 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#65 0x08059853 in main (argc=3, argv=0xbfda9104) at /home/kde-devel/src/kde4/kdenetwork/kopete/kopete/main.cpp:104
Comment 1 Roman Jarosz 2009-04-25 11:32:49 UTC
SVN commit 958958 by rjarosz:

Myself contact always have to have Kopete::ContactList::self()->myself() as metaContact even the fake one.

BUG: 190607



 M  +3 -9      chatwindowconfig.cpp  
 M  +0 -1      chatwindowconfig.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=958958
Comment 2 Dario Andres 2009-04-28 20:07:54 UTC
*** Bug 190945 has been marked as a duplicate of this bug. ***
Comment 3 Dario Andres 2009-05-01 00:27:01 UTC
*** Bug 191143 has been marked as a duplicate of this bug. ***