Myself contact always have to have Kopete::ContactList::self()->myself() as metaContact even the fake one.

BUG: 190607


svn path=/trunk/KDE/kdenetwork/kopete/; revision=958958